// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should allowed all size 1`] = `
<button class="fay-btn default mini ">
  <!---->
  <!---->
  <!---->
</button><button class="fay-btn default small ">
  <!---->
  <!---->
  <!---->
</button><button class="fay-btn default medium ">
  <!---->
  <!---->
  <!---->
</button><button class="fay-btn default large ">
  <!---->
  <!---->
  <!---->
</button>
`;

exports[`Button should allowed all types 1`] = `
<button class="fay-btn default medium ">
  <!---->
  <!---->
  <!---->
</button><button class="fay-btn success medium ">
  <!---->
  <!---->
  <!---->
</button><button class="fay-btn warning medium ">
  <!---->
  <!---->
  <!---->
</button><button class="fay-btn error medium ">
  <!---->
  <!---->
  <!---->
</button>
`;

exports[`Button should be render as Element 1`] = `
<button class="fay-btn default medium ">
  <!---->
  <!---->
  <!---->
</button>
`;
